smartwatch/build/log/idf_py_stdout_output_10485
[1/12] Performing build step for 'bootloader'
[1/1] cd /Users/Lucas/Documents/Engineering/SmartWatch/smartwatch/build/bootloader/esp-idf/esptool_py && /Users/Lucas/.espressif/python_env/idf5.2_py3.12_env/bin/python /Users/Lucas/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/Lucas/Documents/Engineering/SmartWatch/smartwatch/build/bootloader/bootloader.bin
Bootloader binary size 0x5250 bytes. 0x2db0 bytes (36%) free.
[2/12] Building CXX object esp-idf/Touch/CMakeFiles/__idf_Touch.dir/FT6206.cpp.obj
FAILED: esp-idf/Touch/CMakeFiles/__idf_Touch.dir/FT6206.cpp.obj 
/Users/Lucas/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32s3-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.2.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/Lucas/Documents/Engineering/SmartWatch/smartwatch/build/config -I/Users/Lucas/Documents/Engineering/SmartWatch/smartwatch/components/Touch/include -I/Users/Lucas/esp/esp-idf/components/newlib/platform_include -I/Users/Lucas/esp/esp-idf/components/freertos/config/include -I/Users/Lucas/esp/esp-idf/components/freertos/config/include/freertos -I/Users/Lucas/esp/esp-idf/components/freertos/config/xtensa/include -I/Users/Lucas/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/Lucas/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/Lucas/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/Lucas/esp/esp-idf/components/freertos/esp_additions/include -I/Users/Lucas/esp/esp-idf/components/esp_hw_support/include -I/Users/Lucas/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/Lucas/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/Users/Lucas/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/Users/Lucas/esp/esp-idf/components/heap/include -I/Users/Lucas/esp/esp-idf/components/log/include -I/Users/Lucas/esp/esp-idf/components/soc/include -I/Users/Lucas/esp/esp-idf/components/soc/esp32s3 -I/Users/Lucas/esp/esp-idf/components/soc/esp32s3/include -I/Users/Lucas/esp/esp-idf/components/hal/platform_port/include -I/Users/Lucas/esp/esp-idf/components/hal/esp32s3/include -I/Users/Lucas/esp/esp-idf/components/hal/include -I/Users/Lucas/esp/esp-idf/components/esp_rom/include -I/Users/Lucas/esp/esp-idf/components/esp_rom/include/esp32s3 -I/Users/Lucas/esp/esp-idf/components/esp_rom/esp32s3 -I/Users/Lucas/esp/esp-idf/components/esp_common/include -I/Users/Lucas/esp/esp-idf/components/esp_system/include -I/Users/Lucas/esp/esp-idf/components/esp_system/port/soc -I/Users/Lucas/esp/esp-idf/components/esp_system/port/include/private -I/Users/Lucas/esp/esp-idf/components/xtensa/esp32s3/include -I/Users/Lucas/esp/esp-idf/components/xtensa/include -I/Users/Lucas/esp/esp-idf/components/xtensa/deprecated_include -I/Users/Lucas/esp/esp-idf/components/lwip/include -I/Users/Lucas/esp/esp-idf/components/lwip/include/apps -I/Users/Lucas/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/Lucas/esp/esp-idf/components/lwip/lwip/src/include -I/Users/Lucas/esp/esp-idf/components/lwip/port/include -I/Users/Lucas/esp/esp-idf/components/lwip/port/freertos/include -I/Users/Lucas/esp/esp-idf/components/lwip/port/esp32xx/include -I/Users/Lucas/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/Lucas/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/Lucas/esp/esp-idf/components/driver/include -I/Users/Lucas/esp/esp-idf/components/driver/deprecated -I/Users/Lucas/esp/esp-idf/components/driver/analog_comparator/include -I/Users/Lucas/esp/esp-idf/components/driver/dac/include -I/Users/Lucas/esp/esp-idf/components/driver/gpio/include -I/Users/Lucas/esp/esp-idf/components/driver/gptimer/include -I/Users/Lucas/esp/esp-idf/components/driver/i2c/include -I/Users/Lucas/esp/esp-idf/components/driver/i2s/include -I/Users/Lucas/esp/esp-idf/components/driver/ledc/include -I/Users/Lucas/esp/esp-idf/components/driver/mcpwm/include -I/Users/Lucas/esp/esp-idf/components/driver/parlio/include -I/Users/Lucas/esp/esp-idf/components/driver/pcnt/include -I/Users/Lucas/esp/esp-idf/components/driver/rmt/include -I/Users/Lucas/esp/esp-idf/components/driver/sdio_slave/include -I/Users/Lucas/esp/esp-idf/components/driver/sdmmc/include -I/Users/Lucas/esp/esp-idf/components/driver/sigma_delta/include -I/Users/Lucas/esp/esp-idf/components/driver/spi/include -I/Users/Lucas/esp/esp-idf/components/driver/temperature_sensor/include -I/Users/Lucas/esp/esp-idf/components/driver/touch_sensor/include -I/Users/Lucas/esp/esp-idf/components/driver/twai/include -I/Users/Lucas/esp/esp-idf/components/driver/uart/include -I/Users/Lucas/esp/esp-idf/components/driver/usb_serial_jtag/include -I/Users/Lucas/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/Users/Lucas/esp/esp-idf/components/esp_pm/include -I/Users/Lucas/esp/esp-idf/components/esp_ringbuf/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/Lucas/Documents/Engineering/SmartWatch/smartwatch=. -fmacro-prefix-map=/Users/Lucas/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -MD -MT esp-idf/Touch/CMakeFiles/__idf_Touch.dir/FT6206.cpp.obj -MF esp-idf/Touch/CMakeFiles/__idf_Touch.dir/FT6206.cpp.obj.d -o esp-idf/Touch/CMakeFiles/__idf_Touch.dir/FT6206.cpp.obj -c /Users/Lucas/Documents/Engineering/SmartWatch/smartwatch/components/Touch/FT6206.cpp
/Users/Lucas/Documents/Engineering/SmartWatch/smartwatch/components/Touch/FT6206.cpp: In member function 'bool FT6206::begin(uint8_t, uint8_t)':
/Users/Lucas/Documents/Engineering/SmartWatch/smartwatch/components/Touch/FT6206.cpp:53:7: error: 'i2c_dev' was not declared in this scope
   53 |   if (i2c_dev)
      |       ^~~~~~~
/Users/Lucas/Documents/Engineering/SmartWatch/smartwatch/components/Touch/FT6206.cpp:54:5: error: type '<type error>' argument given to 'delete', expected pointer
   54 |     delete i2c_dev;
      |     ^~~~~~~~~~~~~~
/Users/Lucas/Documents/Engineering/SmartWatch/smartwatch/components/Touch/FT6206.cpp:56:8: error: 'i2c_dev' was not declared in this scope
   56 |   if (!i2c_dev->begin())
      |        ^~~~~~~
/Users/Lucas/Documents/Engineering/SmartWatch/smartwatch/components/Touch/FT6206.cpp: In member function 'void FT6206::readData()':
/Users/Lucas/Documents/Engineering/SmartWatch/smartwatch/components/Touch/FT6206.cpp:142:3: error: 'i2c_dev' was not declared in this scope
  142 |   i2c_dev->write_then_read(&addr, 1, i2cdat, 16);
      |   ^~~~~~~
/Users/Lucas/Documents/Engineering/SmartWatch/smartwatch/components/Touch/FT6206.cpp: In member function 'uint8_t FT6206::readRegister8(uint8_t)':
/Users/Lucas/Documents/Engineering/SmartWatch/smartwatch/components/Touch/FT6206.cpp:193:3: error: 'i2c_dev' was not declared in this scope
  193 |   i2c_dev->write_then_read(buffer, 1, buffer, 1);
      |   ^~~~~~~
/Users/Lucas/Documents/Engineering/SmartWatch/smartwatch/components/Touch/FT6206.cpp: In member function 'void FT6206::writeRegister8(uint8_t, uint8_t)':
/Users/Lucas/Documents/Engineering/SmartWatch/smartwatch/components/Touch/FT6206.cpp:199:3: error: 'i2c_dev' was not declared in this scope
  199 |   i2c_dev->write(buffer, 2);
      |   ^~~~~~~
[3/12] No install step for 'bootloader'
[4/12] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/smartwatch.cpp.obj
/Users/Lucas/Documents/Engineering/SmartWatch/smartwatch/main/smartwatch.cpp: In function 'void app_main()':
/Users/Lucas/Documents/Engineering/SmartWatch/smartwatch/main/smartwatch.cpp:40:22: warning: variable 'p' set but not used [-Wunused-but-set-variable]
   40 |             TS_Point p = focal_ctp.getPoint(0);
      |                      ^
ninja: build stopped: subcommand failed.
